--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -115,7 +115,7 @@
                     </div>
                 </article>
                 <article class="recurso-container">
-                    <h3 >Resolução de Exercício: Retas</h3>
+                    <h3 >Resolução de Exercícios: Equação da reta parte 1</h3>
                     <div class="recurso-content">
 
                         <div class="recurso-box">
@@ -130,36 +130,15 @@
                                 <h5>Monitora: Bárbara Moraes </h5>
                                 <h5> Orientadores: Begoña Alarcón</h5>
                                 <h6>Ano: 2022</h6>
-                                <p>(adicionar descrição)</p>
+                                <p>Video de resolução de exercício sobre como esboçar o gráfico da reta, identificando as interseções com os eixos coordenados e estudo dos sinais da expressão</p>
                             </div>
                         </div>
 
                     </div>
                 </article>
+                
                 <article class="recurso-container">
-                    <h3 >Ilustração gráfica de composição de funções.</h3>
-                    <div class="recurso-content">
-
-                        <div class="recurso-box">
-
-                            <a href="https://www.youtube.com/watch?v=FPcuhMy7rN8" target="_blank">
-                            <span>
-                                <img src="../assets/img/composicao-de-funcoes.png" alt="Video do youtube">
-                                <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
-                            </span>
-                            </a>
-                            <div class="recurso-descricao">
-                                <h5>Monitora: Celine Abreu </h5>
-                                <h5> Orientadora: Maria João Resende </h5>
-                                <h6>Ano: 2022</h6>
-                                <p>(adicionar descrição)</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
-                <article class="recurso-container">
-                    <h3 >Resolução de Exercícios.</h3>
+                    <h3 >Resolução de Exercícios: Equação da reta parte 2.</h3>
                     <div class="recurso-content">
 
                         <div class="recurso-box">
@@ -174,7 +153,29 @@
                                 <h5>Monitora: Bárbara Moraes  </h5>
                                 <h5> Orientadora: Begoña Alarcón </h5>
                                 <h6>Ano: 2022</h6>
-                                <p>(adicionar descrição)</p>
+                                <p>Video de resolução de exercício que explica como determinar a equação da reta </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <article class="recurso-container">
+                    <h3 >Cmposição de funções.</h3>
+                    <div class="recurso-content">
+
+                        <div class="recurso-box">
+
+                            <a href="https://www.youtube.com/watch?v=FPcuhMy7rN8" target="_blank">
+                            <span>
+                                <img src="../assets/img/composicao-de-funcoes.png" alt="Video do youtube">
+                                <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
+                            </span>
+                            </a>
+                            <div class="recurso-descricao">
+                                <h5>Monitora: Celine Abreu </h5>
+                                <h5> Orientadora: Maria João Resende </h5>
+                                <h6>Ano: 2022</h6>
+                                <p>Video com ilustração gráfica de uma situação problema para explicar sobre composição de funções.</p>
                             </div>
                         </div>
 
