--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -282,7 +282,7 @@
                                 <h5>Orientador: Pablo Barrientos</h5>
                                 <h6>Ano: 2023</h6>
                                 <p >
-                                    O livro de atividades apresenta abordagem visual com gráficos 3D de conceitos do vetor gradiente e algumas relações com a correspondente curva de nível.
+                                    O livro de atividades apresenta uma abordagem visual com gráficos 3D dos conceitos do vetor gradiente e algumas relações com a correspondente curva de nível.
                                 </p>
 <!-- <p class="comentario">O texto abaixo fica na descrição do livro dentro do site geogebra. Fazer um resumo para substituí-lo</p><br> -->
 <!-- Ao longo dessas atividades, os alunos são incentivados a interagir com applets para responder aos exercícios de fixação, promovendo uma abordagem prática e envolvente. -->
