Fim do dia 30 de novembro

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -55,7 +55,7 @@
 
 <!-- Seção 1 > Container 1 -->
                 <article class="recurso-container">
-                    <h3>Propriedades de Funções Trigonométricas</h3>
+                    <h3>Playlist com a propriedades das Funções Trigonométricas</h3>
                     <div class="recurso-content">
 
 <!-- Seção 1 > Container 1 > Box 1 -->
@@ -75,6 +75,7 @@
 <!-- Fim Seção 1 > Container 1 > Box 1 -->
                         
 <!-- Seção 1 > Container 1 > Box 2 -->
+                        <h3>Propriedades das Funções Trigonométricas</h3>
                         <div class="recurso-box">
                             <a href="https://redmatuff.github.io/FichasTrigonometricas/Fun%C3%A7%C3%A3oSeno/index.html" target="_blank">
                                 <img src="../assets/img/site-ficha-trig.png" alt="Site Fichas Trigonométricas">
