Adição de textos na págima quem-somos, melhoria no posicionamento do hr em sobre na index, melhoria no css, melhoria na página padrão

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -18,7 +18,7 @@
     <main>
 
         <section class="sobre">
-            <div class="fixar">
+            <div class="box-sobre">
                 <h2>Livros Eletrônicos</h2>
                 <!-- Alterar este texto -->
                 <p>Nessa seção você encontra os livros eletrônicos desenvolvidos</p>
