--- a/pages/pag-padrao.html
+++ b/pages/pag-padrao.html
@@ -18,64 +18,63 @@
 
     <main>
       <section class="sobre">
-        <h2>Título</h2>
-        <p>Texto</p>
-        <div class="apenas-desktop">
-          <h2>Título (aparece apenas no desktop)</h2>
-          <p>Texto (aparece apenas no desktop)</p>
+        <div class="box-sobre">
+          <h2>Título</h2>
+          <p>Texto</p>
+        </div>
+        <div class="box-sobre">
+          <div class="apenas-desktop">
+            <h2>Título (aparece apenas no desktop)</h2>
+            <p>Texto (aparece apenas no desktop)</p>
+            <hr />
+          </div>
+        </div>
+        <div class="box-sobre">
+          <div class="apenas-desktop">
+            <h2>Título (aparece apenas no desktop)</h2>
+            <p>Texto (aparece apenas no desktop e fica fixo após rolagem em desktops por ser o último "box-sobre")</p>
+          </div>
         </div>
       </section>
       <section class="content">
+
+
+
+
+<!-- Primeira seção -->
         <section id="">
-          <!-- colocar um id para ser chamado e rolas a página até aqui-->
-          <h2>Título do produto</h2>
-          <h5>Monitores:</h5>
-          <h6>Data: --/----</h6>
-          <div class="recurso-container">
-            <div>
-              <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão" />
-              <!-- colocar caminho da imagem e alt-->
-              <div class="recurso-box">
-                <p>Texto medio sobre o produto.</p>
-                <p>Textos longos contornam a imagem</p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veritatis, nobis cumque ullam placeat ipsam ea eius
-                  reprehenderit libero sit repellendus molestiae? Earum quos
-                  quisquam veniam quae sequi ducimus aut alias? Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Maiores
-                  accusantium similique totam quae, magnam corrupti laudantium
-                  aliquam doloribus deserunt debitis tempora eius
-                  necessitatibus, voluptate at. Inventore incidunt nisi eius
-                  quidem.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Repellat harum rem, esse laudantium earum at qui fuga cum
-                  vitae, sit ipsa laborum! Natus corporis, perferendis
-                  exercitationem culpa illo optio molestiae.
-                </p>
-              </div>
-            </div>
-          </div>
+          <!-- colocar um id para ser chamado e rolar a página até aqui quando aberto via link de outra pagina-->
+          <h2>Título</h2>
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis harum molestiae aut earum vitae illo eum quasi, nemo odio nihil obcaecati repellendus excepturi sunt maiores officiis, dolore ut architecto.</p>
+
         </section>
 
+
+
+<!-- Segunda Seção -->
         <section id="">
-          <!-- colocar um id para ser chamado e rolas a página até aqui-->
+          <!-- colocar um id para ser chamado e rolar a página até aqui-->
           <h2>Título do produto</h2>
-          <h5>Monitores:</h5>
-          <h6>Data: --/----</h6>
-          <div class="recurso-container">
-            <div>
-              <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão" />
-              <!-- colocar caminho da imagem e alt-->
-              <div class="recurso-box">
-                <p>Texto curto sobre o produto.</p>
-                <p>Texto curto fica em baixo.</p>
-              </div>
-            </div>
-          </div>
+
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis alias explicabo ipsam veniam aut! Error, velit assumenda corporis laboriosam, nulla neque dicta fugiat rem blanditiis quae aperiam consequuntur, beatae reprehenderit!</p>
+          <!-- FAZER AQUI A ESTRUTURAÇÃO COMO DESEJAR -->
+
         </section>
+
+
+
+
+<!-- ABRIR AQUI NOVAS SEÇÕES -->
+        <!-- <section id=""> -->
+
+        <!-- </section> -->
+
+
+
+
+
+        
       </section>
     </main>
 
