--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -17,7 +17,7 @@
 
         <main>
             <section class="sobre">
-                <div class="fixar">
+                <div class="box-sobre">
                     <h1>Projetos de Ensino</h1>
                     <p class="revisar">
                         Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares,)
@@ -29,14 +29,14 @@
                         </p>
                     </span>
                 </div>
-                <div class="fixar">
+                <div class="box-sobre">
                     <div class="apenas-desktop">
                         <hr>
                         <h2>Titulo teste</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id sed temporibus numquam mollitia ad soluta blanditiis consequatur rem saepe. Incidunt odio molestias soluta ducimus neque temporibus iusto pariatur nisi!</p>
                     </div>
                 </div>
-                <div class="fixar">
+                <div class="box-sobre">
                     <div class="apenas-desktop">
                         <hr>
                         <h2>Titulo teste 2</h2>
