--- a/pages/projetos-extensao.html
+++ b/pages/projetos-extensao.html
@@ -18,7 +18,7 @@
     <main>
 
         <section class="sobre">
-            <div class="fixar">
+            <div class="box-sobre">
                 <h1>Projetos de Extensão</h1>
                 <p class="revisar">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, corporis quidem! Praesentium sunt sed dolores laudantium deserunt magni corrupti et ut quae, molestiae dolor, quam perferendis blanditiis iusto libero nostrum!
