REDMAT em maiúsculo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="box-sobre">
           <h2>Sobre o Projeto</h2>
           <p>
-            O projeto de monitoria REDMat (Recursos Educacionais Digitais para o
+            O projeto de monitoria REDMAT (Recursos Educacionais Digitais para o
             ensino da Matemática) nasceu em 2021 e visa desenvolver conteúdo
             digital para ajudar no processo de ensino-aprendizagem do discente
             em disciplinas do IME. O conteúdo é apresentado de uma maneira mais
