atualizei descrição de REDMAT na página de inicio e na página de quem somos. Atualizei a história do projeto. Alterei algumas coisas da parte de equipes, como a ordem. Troquiei Equipes por Famíla REDMAT

--- a/index.html
+++ b/index.html
@@ -28,12 +28,30 @@
         <div class="box-sobre">
           <h2>Sobre o Projeto</h2>
           <p>
-            O projeto de monitoria REDMAT (Recursos Educacionais Digitais para o
-            ensino da Matemática) nasceu em 2021 e visa desenvolver conteúdo
-            digital para ajudar no processo de ensino-aprendizagem do discente
-            em disciplinas do IME. O conteúdo é apresentado de uma maneira mais
-            moderna e interativa através de plataformas digitais e recursos
-            computacionais.
+            <!--REDMAT (Recursos Educacionais Digitais para o
+            ensino da Matemática) é um projeto de pesquisa, ensino e extensão que visa estudar, desenvolver e aplicar conteúdo
+            digital para auxiliar docentes e discentes no processo de ensino-aprendizagem em disciplinas de matemática. <br/>
+            Os tópicos serão apresenados de maneira mais intuitiva, dinâmica e interativa através de plataformas digitais e recursos
+            computacionais. -->
+            O projeto de pesquisa, ensino e extensão REDMAT (Recursos Educacionais 
+            Digitais para o ensino da Matemática) tem seus origens em 2019 quando três 
+            professores do Instituto de Matemática e Estatística da UFF sentiram a 
+            necessidade de criar um projeto de ensino interdepartamental para
+            desenvolver recursos computacionais 3D para as disciplinas com conteúdos 
+            de geometria analítica e cálculo de várias variáveis. No entanto, foi em 
+            2020 quando teve um grande impulso devido à urgência de produzir recursos 
+            educacionais digitais para todas as disciplinas de graduação. Alunos da 
+            matemática, física, engenharia e computação, entre outros, foram se 
+            interessando no projeto, o que derivou na ampliação da proposta original com
+            projetos de monitoria e de extensão. <br/>
+            Desde 2021, os monitores vem atuando em vários projetos de ensino do IME junto
+            a professores.  E a equipe extensionista vem desenvolvendo tecnologia de educação,
+            apresentando trabalhos e ministrando oficinas para docentes e discentes da
+            rede básica de ensino. <br/>
+            Aos poucos, estão sendo orientados Trabalhos de conclusão de curso 
+            e apresentado trabalhos em eventos científicos.
+         
+          </p>
           </p>
           <hr />
         </div>
