Adicionei <p> na descrição do projeto no index

--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -22,9 +22,11 @@
           <p>
             REDMAT (Recursos Educacionais Digitais para o
             ensino da Matemática) é um projeto de pesquisa, ensino e extensão 
-            que visa estudar, desenvolver e aplicar conteúdo digital para 
+            que visa estudar e desenvolver tecnologias de ensino para 
             auxiliar docentes e discentes no processo de ensino-aprendizagem 
             em disciplinas de matemática. <br/>
+            Também tem como objetivo pesquisar, aplicar 
+            as tecnologias dentro ou fora de sala de aula e analisar os resultados. 
             
              <!-- Sobra: 
               Os tópicos serão apresenados de maneira mais intuitiva, dinâmica e interativa através de plataformas digitais e recursos
@@ -268,10 +270,11 @@
         <h4>Alunos:</h4>
         <ol>
           <li>Alan Gomes (Ciência da Computação)</li>
-          <li>Gabriel Santos (Matemática)</li>
-          <li>João Victor Da Silva (Química)</li>
+          <li>Gabriel Santos (Lic. Matemática)</li>
+          <li>João Pedro Teixeira De Sá (Lic. em Matemática)</li>
+          <li>João Victor Da Silva (Engenharia Química)</li>
           <li>Maria Americo (Engenharia Elétrica)</li>
-          <li>Raphael Odalvo (Matemática)</li>
+          <li>Raphael Odalvo (Lic. Matemática)</li>
           <li>Ruan Risso (Engenharia de Meio Ambiente)</li>
         </ol>
         <p class="revisar">
@@ -320,11 +323,11 @@
 
         <h4>Alunos:</h4>
         <ol>
-          <li>João Pedro Teixeira De Sá (Licenciatura em Matemática);</li>
-          <li>Raphael Brandão (Licenciatura em Matemática);</li>
-          <li>Júlia Canário dos Anjos (Licenciatura em Física);</li>
-          <li>Júlia Lobato de Rezende (Licenciatura em Matemática);</li>
-          <li>Paula Bruna Daco (Bacharelado em Matemática);</li>
+          <li>João Pedro Teixeira De Sá (Lic. em Matemática);</li>
+          <li>Raphael Brandão (Lic. em Matemática);</li>
+          <li>Júlia Canário dos Anjos (Lic. em Física);</li>
+          <li>Júlia Lobato de Rezende (Lic. em Matemática);</li>
+          <li>Paula Bruna Daco (Bach. em Matemática);</li>
           <li>Guilherme Cardoso Garcia de Carvalho (Engenharia Elétrica)</li>
         </ol>
 
