--- a/index.html
+++ b/index.html
@@ -38,21 +38,27 @@
             professores do Instituto de Matemática e Estatística da UFF sentiram a 
             necessidade de criar um projeto de ensino interdepartamental para
             desenvolver recursos computacionais 3D para as disciplinas com conteúdos 
-            de geometria analítica e cálculo de várias variáveis. No entanto, foi em 
-            2020 quando teve um grande impulso devido à urgência de produzir recursos 
+            de geometria analítica e cálculo de várias variáveis. 
+          </p>
+          <p>
+            No entanto, foi em 2020 quando teve um grande impulso devido à urgência de produzir recursos 
             educacionais digitais para todas as disciplinas de graduação. Alunos da 
             matemática, física, engenharia e computação, entre outros, foram se 
             interessando no projeto, o que derivou na ampliação da proposta original com
-            projetos de monitoria e de extensão. <br/>
+            projetos de monitoria e de extensão. 
+          </p>
+          <p>            
             Desde 2021, os monitores vem atuando em vários projetos de ensino do IME junto
             a professores.  E a equipe extensionista vem desenvolvendo tecnologia de educação,
             apresentando trabalhos e ministrando oficinas para docentes e discentes da
-            rede básica de ensino. <br/>
+            rede básica de ensino. 
+          </p>
+          <p>
             Aos poucos, estão sendo orientados Trabalhos de conclusão de curso 
             e apresentado trabalhos em eventos científicos.
          
           </p>
-          </p>
+          
           <hr />
         </div>
 
