--- a/pages/footer.html
+++ b/pages/footer.html
@@ -21,7 +21,7 @@
             </div>
             <div class="sec-ft" id="sec-1">
                 <div>
-                    <a href="https://www.instagram.com/monitoriaredmatuff/" target="_blank">
+                    <a href="https://www.instagram.com/redmatuff/" target="_blank">
                         <img src="https://redmatuff.github.io/site/assets/icons/instagram.png" alt="icone do instagram">
                     </a>
 
