atualizei a ordem dos projetos na home e no menu. Dei uma repaginada na página dos projetos e comecei a incluir os textos.

--- a/index.html
+++ b/index.html
@@ -177,16 +177,13 @@
         <!-- 2.1. Projetos de Ensino -->
         <h2>
           <a href="pages/proj-ensino.html">
-            Projetos de Ensino com participação do REDMat
+            Projetos de Ensino relacionados ao projeto REDMAT
           </a>
         </h2>
-        <p>
-          Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino
+        <!--<p>
+          Os monitores REDMAT atuaram ou atuam nos seguintes projetos de ensino
           do Instituto de Matemática e Estatística.
-        </p>
-
-        <!-- Remover este comentario após resolução do problema -->
-        <p class="comentario">colocar links para página final nos itens</p>
+        </p>-->
 
         <ul>
           <li>
@@ -196,26 +193,26 @@
             </a>
           </li>
           <li>
-            <a href="pages/proj-ensino.html#geog-3d">
-              <img
-                src="assets/icons/geogebra-icon-peq.png"
-                alt="icone geogebra 3D"
-              />
-              <p>Geogebra&nbsp;3D (2020-2021)</p>
-            </a>
-          </li>
-          <li>
-            <a href="pages/proj-ensino.html#disc-dist-soc">
-              <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
-              <p>Disciplinas no distanciamento social&nbsp;(2020)</p>
+            <a href="pages/proj-ensino.html#fcg">
+              <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+              <p>FCG (2023---)</p>
             </a>
           </li>
           <li>
             <a href="pages/proj-ensino.html#novas-tec-ensino">
               <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
-              <p>Novas tecnologias de ensino&nbsp;(2020--)</p>
+              <p>Tecnologias de ensino (2020---)</p>
             </a>
           </li>
+          <li>
+            <a href="pages/proj-ensino.html#geog-3d">
+              <img
+                src="assets/icons/geogebra-icon-peq.png"
+                alt="icone geogebra 3D"
+              />
+              <p>GeoGebra 3D (2020-2022)</p>
+            </a>
+          </li>          
           <li>
             <a href="pages/proj-ensino.html#gacv">
               <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
@@ -223,24 +220,26 @@
             </a>
           </li>
           <li>
-            <a href="pages/proj-ensino.html#fcg">
-              <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
-              <p>FCG (2023--)</p>
+            <a href="pages/proj-ensino.html#disc-dist-soc">
+              <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
+              <p>Disciplinas no distanciamento social&nbsp;(2020-2021)</p>
             </a>
           </li>
+          
         </ul>
         <hr />
 
         <!-- 2.2. Livros Eletrônicos -->
         <h2>
           <a href="pages/livros-eletronicos.html">
-            Livros eletrônicos, Apostilas e Ambientes Virtuais de Aprendizagem
+            Livros eletrônicos e apostilas
           </a>
         </h2>
-        <p>
+     <!--   <p>
           Os monitores REDMat colaboraram na produção do seguinte material
           digital:
-        </p>
+        </p> -->
+
         <ul>
           <li>
             <a href="https://www.geogebra.org/m/hzvsftdf">
@@ -286,52 +285,20 @@
               href="https://fcgeometria.notion.site/fcgeometria/Fundamentos-de-C-lculo-e-Geometria-d169bff4f8e34c229fdd97b514ff02e4"
             >
               <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
-              <p>Apostila de FCG</p>
+              <p>Apostila de Fundamentos de Cálculo e Geometra. Cap 1.</p>
             </a>
           </li>
         </ul>
         <hr />
 
-        <!-- 2.3. Plataformas -->
-        <h2>
-          <a href="pages/proj-ensino.html">
-            Plataformas com participação do REDMat
-          </a>
-        </h2>
-        <p>Os monitores REDMat atuaram nas seguintes plataformas:</p>
-
-        <ul>
-          <li>
-            <a href="http://www.gma.uff.br/calculo1a/">
-              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-              <p>Site Cálculo&nbsp;1A</p>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://redmatuff.github.io/calculovariasvariaveis/">
-              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-              <p>Site Cálculo&nbsp;2B</p>
-            </a>
-          </li>
-
-          <li>
-            <a href="http://www.gma.uff.br/calculo3a/">
-              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-              <p>Site Cálculo&nbsp;3A</p>
-            </a>
-          </li>
-        </ul>
-        <hr />
-
-        <!-- 2.4. Recursos Computacionais -->
+        <!-- 2.3. Recursos Computacionais -->
         <h2>
           <a href="pages/recursos.html"> Recursos Computacionais </a>
         </h2>
-        <p>
+        <!-- <p>
           Os monitores REDMat colaboraram na produção do seguinte material
           digital:
-        </p>
+        </p> -->
 
         <ul>
           <li>
@@ -340,7 +307,7 @@
                 src="assets/icons/icone-func.png"
                 alt="Funções de Uma Variável"
               />
-              <p>Funções de Uma Variável</p>
+              <p>Funções</p>
             </a>
           </li>
           <li>
@@ -370,7 +337,48 @@
               <p>Equações Diferenciais Ordinárias</p>
             </a>
           </li>
+          <li>
+            <a href="pages/recursos.html#calc-func-uma-var">
+              <img
+                src="assets/icons/icone-func.png"
+                alt="Geometria Analítica"
+              />
+              <p>Geometria Analítica</p>
+            </a>
+          </li>
         </ul>
+        <hr />
+        <!-- 2.4. Plataformas -->
+        <h2>
+          <a href="pages/proj-ensino.html">
+            Plataformas virtuais de aprendizagem
+          </a>
+        </h2>
+        <!-- <p> Os monitores REDMat atuaram nas seguintes plataformas:</p> -->
+
+        <ul>
+          <li>
+            <a href="http://www.gma.uff.br/calculo1/">
+              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
+              <p>Cálculo&nbsp;1A</p>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://redmatuff.github.io/calculovariasvariaveis/">
+              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
+              <p>Cálculo diferencial de várias variáveis (em andamento)</p>
+            </a>
+          </li>
+
+          <!--<li>
+            <p></p><a href="http://www.gma.uff.br/calculo3/">
+              <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
+              Site Cálculo&nbsp;3A
+             e Cálculo 3A especial (em andamento)</p></a>
+          </li> -->
+        </ul>
+        
         <!-- <hr> -->
 
         <!-- 2.5. Projetos de Extensão -->
