criação de lista personalizada

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -160,6 +160,8 @@
                             Esas atividades foram divididas em quatro blocos, onde foram coletados recursos computacionais
                             sobre as seguintes matérias:
                         </p>
+
+                            <div class="lista-personalizada">
                                 <ul>
                                     <li>
                                         Revisão de geometria analítica, para uma melhor compreensão do espaço tridimensional e 
@@ -183,6 +185,7 @@
                                     </li>
                                 </ul>                       
           
+                            </div>
                     </div>
                 </section>
                 <hr>              
