Remoção do bug que mantinha menu aberto após clicar em um item e voltar na pagina anterior (versão celular). Padronização da estilização de listas ul desde que se use classe lista na tag pai.

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -161,7 +161,7 @@
                             sobre as seguintes matérias:
                         </p>
 
-                            <div class="lista-personalizada">
+                            <div class="lista"> <!-- Pode renomear para "lista-personalizada" enquanto houver código em "proj-ensino.css". Apagar o código neste arquivo após eventuais verificações, uma vez que o código para listas no site foi padronizado. em "main.css"-->
                                 <ul>
                                     <li>
                                         Revisão de geometria analítica, para uma melhor compreensão do espaço tridimensional e 
