Organização do código index.html e main.css. Melhoria na página de recursos modularizando área sobre funções trigonométricas.

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -93,8 +93,12 @@
                 </div>
               </div>
               <!-- Fim Seção 1 > Container 1 > Box 1 -->
+            </div>
+          </article>
 
-              <!-- Seção 1 > Container 1 > Box 2 -->
+          <article class="recurso-container">
+            <div class="recurso-content">
+              <!-- Seção 1 > Container 2 > Box 1 -->
               <h3>Propriedades das Funções Trigonométricas</h3>
               <div class="recurso-box">
                 <a
@@ -123,7 +127,8 @@
                   <!-- <p> O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos.</p> -->
                 </div>
               </div>
-              <!-- Fim Seção 1 > Container 1 > Box 2 -->
+            </div>
+              <!-- Fim Seção 1 > Container 2 > Box 1 -->
             </div>
           </article>
           <article class="recurso-container">
