Limpeza e Organização de código

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!-- Limpeza e organização do código -->
+<!-- COMENTÁRIOS SOBRE O QUE PRECISA SER DESENVOLVIDO: -->
+
+<!-- Inserir conteúdo nas páginas html -->
+<!-- Remover "Lorem Ipsun" de todas as páginas -->
+<!-- Adição de links externos e imagens -->
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
-<!-- Adição de links externos, conteúdo, e imagens -->
-<!-- Remover console.log dos JavaScripts -->
-<!-- Remover comentários inúteis e adicionar comentários importantes -->
-<!-- Remover os css inutilizados -->
+<!-- Elaborar a página de mensagem enviada -->
+<!-- Remover pg-teste.html? -->
+
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -56,7 +60,6 @@
           <p>
             Aos poucos, estão sendo orientados Trabalhos de conclusão de curso 
             e apresentado trabalhos em eventos científicos.
-         
           </p>
           
           <hr/>
