--- a/pages/footer-test.html
+++ b/pages/footer-test.html
@@ -1,3 +1,5 @@
+<!-- Este documento é usado apenas para montar o footer de forma visual, mas para aplicar ele ao projeto deve-se inserir o código no arquivo "insere-footer.js". Isso faz com que todas as páginas fiquem com o footer padronizado -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
