--- a/pages/header-test.html
+++ b/pages/header-test.html
@@ -1,3 +1,6 @@
+<!-- Este documento é usado apenas para montar o header de forma visual, mas para aplicar ele ao projeto deve-se inserir o código no arquivo "insere-header.js". Isso faz com que todas as páginas fiquem com o header padronizado -->
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
