atualizei os icones na home e nos projetos ensino. Alterei o frame da esquerda da página quem-somos para aparecer as equipes. Adicionei o apartado para GA na págica dos recursos computacionais. Troquei o nome da página seja membro por seja monitor, pois nem todos os membros sao monitores. Do menu hamburguer tirei os links para os projetos, pois não é uma parte muito procurada.Atualizei os links do menu hamburguer.

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
           </li>
           <li>
             <a href="pages/proj-ensino.html#fcg">
-              <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+              <img src="assets/icons/apostila-icon.png" alt="icone apostila" />
               <p>FCG (2023---)</p>
             </a>
           </li>
           <li>
             <a href="pages/proj-ensino.html#novas-tec-ensino">
-              <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+              <img src="assets/icons/tech-logo.png" alt="icone tecnologias" />
               <p>Tecnologias de ensino (2020---)</p>
             </a>
           </li>
@@ -223,13 +223,13 @@
           </li>          
           <li>
             <a href="pages/proj-ensino.html#gacv">
-              <img src="assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+              <img src="assets/icons/livro-icone.png" alt="icone livro" />
               <p>GACV (2020-2022)</p>
             </a>
           </li>
           <li>
             <a href="pages/proj-ensino.html#disc-dist-soc">
-              <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
+              <img src="assets/icons/livro-icone.png" alt="icone livro" />
               <p>Disciplinas no distanciamento social&nbsp;(2020-2021)</p>
             </a>
           </li>
@@ -284,7 +284,7 @@
             <a
               href="https://redmatuff.github.io/calculovariasvariaveis/assets/pdf/apostila/apostila-completa.pdf"
             >
-              <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
+              <img src="assets/icons/livro-icone.png" alt="icone livro" />
               <p>Apostila Cálculo Diferencial de Várias Variáveis</p>
             </a>
           </li>
@@ -293,8 +293,8 @@
             <a
               href="https://fcgeometria.notion.site/fcgeometria/Fundamentos-de-C-lculo-e-Geometria-d169bff4f8e34c229fdd97b514ff02e4"
             >
-              <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
-              <p>Apostila de Fundamentos de Cálculo e Geometra. Cap 1.</p>
+              <img src="assets/icons/apostila-icon.png" alt="icone apostila" />
+              <p>Apostila de Fundamentos de Cálculo e Geometra. Capítulo de Funções.</p>
             </a>
           </li>
 
@@ -377,7 +377,7 @@
           <li>
             <a href="http://www.gma.uff.br/calculo1/">
               <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-              <p>Cálculo&nbsp;1A</p>
+              <p>Cálculo&nbsp;1 (em andamento)</p>
             </a>
           </li>
 
