--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -37,13 +37,13 @@
                             </li>
                             <li>
                                 <a href="proj-ensino.html#fcg">
-                                <img src="../assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+                                <img src="../assets/icons/apostila-icon.png" alt="icone apostila" />
                                 <p>FCG (2023---)</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="proj-ensino.html#novas-tec-ensino">
-                                <img src="../assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+                                <img src="../assets/icons/tech-logo.png" alt="icone tecnologias" />
                                 <p>Tecnologias de ensino (2020---)</p>
                                 </a>
                             </li>
@@ -58,13 +58,13 @@
                             </li>          
                             <li>
                                 <a href="proj-ensino.html#gacv">
-                                <img src="../assets/icons/raio-icone.png" alt="icone geogebra 3D" />
+                                <img src="../assets/icons/livro-icone.png" alt="icone livro" />
                                 <p>GACV (2020-2022)</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="proj-ensino.html#disc-dist-soc">
-                                <img src="../assets/icons/livro-icone.png" alt="icone geogebra 3D" />
+                                <img src="../assets/icons/livro-icone.png" alt="icone livro" />
                                 <p>Disciplinas no distanciamento social&nbsp;(2020-2021)</p>
                                 </a>
                             </li>
