--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -20,7 +20,7 @@
         <div class="box-sobre">
           <h1>Recursos Computacionais</h1>
           <p>
-            Os Recursos Computacionais REDMat são Applets e plataformas que
+            Os Recursos Computacionais REDMAT são Applets e plataformas que
             utilizam tecnologia digital para oferecer suporte ao processo
             educacional. Esses recursos têm o objetivo de enriquecer a
             experiência de aprendizado, proporcionar maior acessibilidade,
@@ -521,6 +521,19 @@
             </div>
           </article>
         </section>
+        <!-- <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
+        <hr class="linha-grossa" />
+
+        <section id="ga">
+          <h2>Geometria analítica</h2>
+          <p>
+            A utilização de recursos computacionais no aprendizado de geometria analítica
+            é necessário para o aluno visualizar todos os objetos geométricos, especialmente
+            os objetos tridimensionais.
+          </p>
+          <hr />
+
+          
       </section>
     </main>
 
